[gd_scene load_steps=7 format=2]

[ext_resource path="res://playerChar/playerChar.tscn" type="PackedScene" id=1]
[ext_resource path="res://playerChar/playerProjectile/standardProjectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://playerChar/playerGunAim/gunCrosshairs.tscn" type="PackedScene" id=3]
[ext_resource path="res://testPlayerControls.gd" type="Script" id=4]
[ext_resource path="res://rope/Rope.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
gunProjectileScene = ExtResource( 2 )

[node name="playerChar" parent="." instance=ExtResource( 1 )]
position = Vector2( 316.902, 294.08 )
collision_layer = 0
collision_mask = 0

[node name="playerGunAim" parent="." instance=ExtResource( 3 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 317.375, 168.982 )
shape = SubResource( 1 )

[node name="RopeSegOne" parent="." instance=ExtResource( 5 )]
position = Vector2( 315.931, 171.861 )

[node name="RopeSegTwo" parent="RopeSegOne" instance=ExtResource( 5 )]
position = Vector2( 0.0471802, 59.857 )
